--- a/app/views/factory/admin/product_plans/_edit.html.erb
+++ b/app/views/factory/admin/product_plans/_edit.html.erb
@@ -5,7 +5,7 @@
   </div>
   
   <div class="content">
-    <%= form_with model: @product_plan, url: admin_product_plans_path(@product) do |f| %>
+    <%= form_with model: @product_plan, url: admin_product_plan_path(@product, @product_plan) do |f| %>
       <%= render partial: 'form', locals: { f: f } %>
     <% end %>
   </div>
