--- a/app/views/factory/products/index.html+phone.erb
+++ b/app/views/factory/products/index.html+phone.erb
@@ -1,8 +1,8 @@
 <div class="weui-panel weui-panel_access">
-  <div class="weui-panel__hd">列表</div>
+  <div class="weui-panel__hd"><%= t('.title') %></div>
   <div class="weui-panel__bd">
   <% @products.each do |product| %>
-    <%= link_to product_path(product), class: 'weui-media-box weui-media-box_appmsg' do %>
+    <%= link_to product_product_plans_path(product), class: 'weui-media-box weui-media-box_appmsg' do %>
       <div class="weui-media-box__hd">
         <%= image_tag product.logo, class: 'weui-media-box__thumb' %>
       </div>
@@ -14,7 +14,8 @@
         <ul class="weui-media-box__info">
           <li class="weui-media-box__info__meta"><%= product.reference_price %></li>
           <li class="weui-media-box__info__meta">时间</li>
-          <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">其它信息</li>
+          <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">
+            其它信息</li>
         </ul>
       </div>
     <% end %>
