use default redirect to

--- a/app/views/factory/product_plans/index.html+phone.erb
+++ b/app/views/factory/product_plans/index.html+phone.erb
@@ -1,23 +1,22 @@
 <div class="weui-panel weui-panel_access">
   <div class="weui-panel__hd">
-    <%= t('.title') %>
+    <%= @product.name %>
   </div>
   <div class="weui-panel__bd">
-    <% @product_plans.each do |product| %>
-      <%= link_to product_product_plans_path(product), class: 'weui-media-box weui-media-box_appmsg' do %>
+    <% @product_plans.each do |product_plan| %>
+      <%= link_to product_path(@product, product_plan_id: product_plan.id), class: 'weui-media-box weui-media-box_appmsg' do %>
         <div class="weui-media-box__hd">
-          <%= image_tag product.logo, class: 'weui-media-box__thumb' %>
+          <%= image_tag @product.logo, class: 'weui-media-box__thumb' %>
         </div>
         <div class="weui-media-box__bd">
-          <h4 class="weui-media-box__title"><%= product.name %></h4>
+          <h4 class="weui-media-box__title"><%= product_plan.start_at %><%= product_plan.finish_at %></h4>
           <p class="weui-media-box__desc">
-            <%= product.description %>
+            <%= product_plan.state_i18n %>
           </p>
           <ul class="weui-media-box__info">
-            <li class="weui-media-box__info__meta"><%= product.reference_price %></li>
-            <li class="weui-media-box__info__meta">时间</li>
-            <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">
-              其它信息</li>
+            <li class="weui-media-box__info__meta"><%= @product.reference_price %></li>
+            <li class="weui-media-box__info__meta"></li>
+            <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">其它信息</li>
           </ul>
         </div>
       <% end %>
