--- a/app/views/factory/products/show.html.erb
+++ b/app/views/factory/products/show.html.erb
@@ -1,5 +1,6 @@
 <%= form_with scope: :custom, url: my_customs_path, id: 'edit_custom' do |f| %>
   <%= f.hidden_field :product_id, value: @product.id %>
+  <%= f.hidden_field :product_plan_id, value: params[:product_plan_id] %>
 <% end %>
 
 <%= render 'show' %>
