--- a/app/views/factory/admin/customs/index.html.erb
+++ b/app/views/factory/admin/customs/index.html.erb
@@ -1,3 +1,13 @@
+<% content_for :breadcrumb do %>
+  <div class="ui basic segment breadcrumb">
+    <%= link_to t('factory.admin.products.index.title'), admin_products_path, class: 'section' %>
+    <i class="fas fa-angle-right divider"></i>
+    <%= link_to t('factory.admin.product_plans.index.title'), admin_product_plans_path(@product), class: 'section' %>
+    <i class="fas fa-angle-right divider"></i>
+    <div class="active section"><%= t('.title') %></div>
+  </div>
+<% end %>
+
 <div class="ui top attached segment">
   <%= render 'filter' %>
 </div>
