--- a/app/views/factory/admin/product_plans/_filter.html.erb
+++ b/app/views/factory/admin/product_plans/_filter.html.erb
@@ -1,5 +1,6 @@
 <%= form_with theme: 'search' do |f| %>
   <div class="fields">
+    <%= f.date_field 'start_at-gte' %>
     <%= f.submit %>
   </div>
 <% end %>
