--- a/app/views/factory/admin/product_plans/index.html.erb
+++ b/app/views/factory/admin/product_plans/index.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <div class="ui top attached segment">
-  <%= render 'search_form' %>
+  <%= render 'filter' %>
 </div>
 
 <table class="ui bottom attached table">
@@ -38,6 +38,9 @@
       <td>
         <%= link_to admin_product_plan_path(@product, product_plan), remote: true, class: 'ui mini circular icon button' do %>
           <i class="fas fa-eye"></i>
+        <% end %>
+        <%= link_to admin_customs_path(product_plan_id: product_plan.id), class: 'ui mini circular icon button' do %>
+          <i class="fas fa-cube"></i>
         <% end %>
         <%= link_to edit_admin_product_plan_path(@product, product_plan), remote: true, class: 'ui mini circular icon button' do %>
           <i class="fas fa-pencil-alt"></i>
