--- a/app/views/application/_factory_nav.html.erb
+++ b/app/views/application/_factory_nav.html.erb
@@ -7,6 +7,7 @@
   </a>
   <div class="<%= active_helper(modules: 'factory/admin', active_class: 'menu content active', item_class: 'menu content') %>">
     <%= link_to t('factory.admin.products.index.title'), admin_products_path, class: active_helper(controllers: ['products', 'product_taxons', 'product_plans', 'product_items']) %>
+    <%= link_to t('factory.admin.produce_plans.index.title'), admin_produce_plans_path, class: active_helper(controllers: ['produce_plans']) %>
     <%= link_to t('factory.admin.parts.index.title'), admin_parts_path, class: active_helper(controllers: ['parts', 'part_taxons', 'part_plans', 'part_items']) %>
     <%= link_to t('factory.admin.providers.index.title'), admin_providers_path, class: active_helper(controllers: 'providers') %>
   </div>
