--- a/app/views/factory/admin/product_plans/index.html.erb
+++ b/app/views/factory/admin/product_plans/index.html.erb
@@ -13,6 +13,7 @@
 <table class="ui bottom attached table">
   <thead>
     <tr>
+      <th><%= ProductPlan.human_attribute_name(:produce_plan_id) %></th>
       <th><%= ProductPlan.human_attribute_name(:start_at) %></th>
       <th><%= ProductPlan.human_attribute_name(:finish_at) %></th>
       <th><%= ProductPlan.human_attribute_name(:state) %></th>
@@ -28,6 +29,7 @@
   <tbody>
   <% @product_plans.each do |product_plan| %>
     <tr>
+      <td><%= product_plan.produce_plan&.title %></td>
       <td><time><%= product_plan.start_at.to_s(:rfc822) %></time></td>
       <td><time><%= product_plan.finish_at.to_s(:rfc822) %></time></td>
       <td><%= product_plan.state_i18n %></td>
