plans page with order

--- a/app/views/factory/my/principal_addresses/index.html+phone.erb
+++ b/app/views/factory/my/principal_addresses/index.html+phone.erb
@@ -15,14 +15,14 @@
       </div>
       <div class="weui-media-box__ft">
         <div class="weui-btn weui-btn_default">
-          <%= link_to '详情', my_principal_address_path(address.id) %>
+          <%= link_to '详情', plans_my_principal_address_path(address.id) %>
         </div>
       </div>
     </div>
     <% end %>
   </div>
   <div class="weui-panel__ft">
-    <%= link_to fork_my_addresses_path, remote: true, class: 'weui-cell weui-cell_access weui-cell_link' do %>
+    <%= link_to fork_my_addresses_path, class: 'weui-cell weui-cell_access weui-cell_link' do %>
       <div class="weui-cell__bd"><%= t('.new') %></div>
       <span class="weui-cell__ft"></span>
     <% end %>
