--- a/app/views/factory/my/orders/index.html.erb
+++ b/app/views/factory/my/orders/index.html.erb
@@ -3,19 +3,20 @@
     <%= @produce_plan.title %>
   </div>
   <div class="weui-panel__bd">
-    <div class="weui-cells">
-      <% @orders.each do |order| %>
-        <div class="weui-cell">
-          <div class="weui-cell__hd"><%= image_tag order.user.avatar_url, style: 'width: 20px;' %></div>
-          <div class="weui-cell__bd">
-            <%= order.user.account_identities.join(',') %>
-          </div>
-          <div class="weui-cell__ft">
-            <div class="weui-btn weui-btn_mini weui-btn_primary">xx</div>
+    <% @orders.each do |order| %>
+      <div class="weui-media-box weui-media-box_appmsg">
+        <div class="weui-media-box__hd"><%= image_tag order.user.avatar_url, style: 'width: 20px;' %></div>
+        <div class="weui-media-box__bd">
+          <h4 class="weui-media-box__title"><%= order.user.account_identities.join(',') %></h4>
+          <div class="weui-media-box__desc">
+            <%= order.trade_items.map(&->(o){ o.good.name }).join(',') %>
           </div>
         </div>
-      <% end %>
-    </div>
+        <div class="weui-media-box__ft">
+          <div class="weui-btn weui-btn_mini weui-btn_primary">xx</div>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
 
