--- a/app/views/factory/my/principal_addresses/plans.html+phone.erb
+++ b/app/views/factory/my/principal_addresses/plans.html+phone.erb
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="weui-form-preview__ft">
-    <%= link_to '操作', my_principal_address_trade_items_path(@address, good_id: produce_plan.id), class: 'weui-form-preview__btn weui-form-preview__btn_primary' %>
+    <%= link_to '操作', my_principal_address_orders_path(@address, produce_plan_id: produce_plan.id), class: 'weui-form-preview__btn weui-form-preview__btn_primary' %>
   </div>
 </div>
 <% end %>
