--- a/app/views/factory/admin/customs/index.html.erb
+++ b/app/views/factory/admin/customs/index.html.erb
@@ -12,7 +12,7 @@
   <%= render 'filter' %>
 </div>
 
-<table class="ui bottom attached table">
+<table class="table is-hoverable is-fullwidth">
   <thead>
     <tr>
       <th><%= Custom.human_attribute_name(:product_name) %></th>
