--- a/app/views/factory/admin/part_taxons/index.html.erb
+++ b/app/views/factory/admin/part_taxons/index.html.erb
@@ -10,7 +10,7 @@
   <%= render 'filter' %>
 </div>
 
-<table class="ui bottom attached table">
+<table class="table is-hoverable is-fullwidth">
   <thead>
     <tr>
       <th><%= PartTaxon.human_attribute_name(:name) %></th>
