--- a/app/views/factory/admin/product_plans/index.html.erb
+++ b/app/views/factory/admin/product_plans/index.html.erb
@@ -10,7 +10,7 @@
   <%= render 'filter' %>
 </div>
 
-<table class="ui bottom attached table">
+<table class="table is-hoverable is-fullwidth">
   <thead>
     <tr>
       <th><%= ProductPlan.human_attribute_name(:produce_plan_id) %></th>
