--- a/app/views/factory/admin/parts/index.html.erb
+++ b/app/views/factory/admin/parts/index.html.erb
@@ -8,7 +8,7 @@
       <th><%= Part.human_attribute_name(:name) %></th>
       <th>
         <%= Part.human_attribute_name(:part_taxon_id) %>
-        <%= link_to admin_part_taxons_path, data: { tooltip: '分类设置' }, target: '_blank' do %>
+        <%= link_to admin_part_taxons_path, aria: { label: '分类设置' }, target: '_blank' do %>
           <i class="fas fa-cog"></i>
         <% end %>
       </th>
@@ -45,10 +45,10 @@
         <%= link_to admin_part_path(part), class: 'ui mini circular icon button' do %>
           <i class="fas fa-eye"></i>
         <% end %>
-        <%= link_to edit_admin_part_path(part), data: { tooltip: t('.edit') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to edit_admin_part_path(part), aria: { label: t('.edit') }, remote: true, class: 'ui mini circular icon button' do %>
           <i class="fas fa-pencil-alt"></i>
         <% end %>
-        <%= link_to admin_part_path(part), method: :delete, data: { tooltip: t('.destroy'), confirm: t('.confirm') }, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_part_path(part), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'ui mini circular icon button' do %>
           <i class="fas fa-trash-alt"></i>
         <% end %>
       </td>
