--- a/app/views/factory/admin/product_plans/_form.html.erb
+++ b/app/views/factory/admin/product_plans/_form.html.erb
@@ -2,13 +2,13 @@
 <%= f.collection_select :produce_plan_id, ProducePlan.all, :id, :title %>
 <div class="inline fields">
   <%= f.label :start_at %>
-  <%= f.date_field 'start_at(date)', on: { wrap_all: false, label: false }, css: { wrap_input: 'three wide field' }, required: true %>
-  <%= f.time_select :start_at, start_hour: 8, end_hour: 18, minute_step: 30, default: { hour: 8, min: 30 }, on: { wrap_all: false, label: false }, css: { wrap_input: 'two wide field' } %>
+  <%= f.date_field 'start_at(date)', can: { wrap_all: false, label: false }, css: { wrap_input: 'three wide field' }, required: true %>
+  <%= f.time_select :start_at, start_hour: 8, end_hour: 18, minute_step: 30, default: { hour: 8, min: 30 }, can: { wrap_all: false, label: false }, css: { wrap_input: 'two wide field' } %>
 </div>
 <div class="inline fields">
   <%= f.label :finish_at %>
-  <%= f.date_field 'finish_at(date)', on: { wrap_all: false, label: false }, css: { wrap_input: 'three wide field' }, required: true %>
-  <%= f.time_select :finish_at, start_hour: 8, end_hour: 18, minute_step: 30, default: { hour: 17, min: 30 }, on: { wrap_all: false, label: false }, css: { wrap_input: 'two wide field' } %>
+  <%= f.date_field 'finish_at(date)', can: { wrap_all: false, label: false }, css: { wrap_input: 'three wide field' }, required: true %>
+  <%= f.time_select :finish_at, start_hour: 8, end_hour: 18, minute_step: 30, default: { hour: 17, min: 30 }, can: { wrap_all: false, label: false }, css: { wrap_input: 'two wide field' } %>
 </div>
 <%= f.select :state, options_for_select(ProductPlan.options_i18n(:state), @product_plan.state) %>
 <%= f.text_field :planned_count, required: true %>
