--- a/app/views/factory/admin/trade_items/index.html.erb
+++ b/app/views/factory/admin/trade_items/index.html.erb
@@ -34,13 +34,13 @@
       <td><%= trade_item.extra %></td>
       <td><%= trade_item.status %></td>
       <td>
-        <%= link_to admin_trade_item_path(trade_item), data: { tooltip: t('.show') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_trade_item_path(trade_item), aria: { label: t('.show') }, remote: true, class: 'ui mini circular icon button' do %>
           <i class="fas fa-eye"></i>
         <% end %>
-        <%= link_to edit_admin_trade_item_path(trade_item), data: { tooltip: t('.edit') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to edit_admin_trade_item_path(trade_item), aria: { label: t('.edit') }, remote: true, class: 'ui mini circular icon button' do %>
           <i class="fas fa-pencil-alt"></i>
         <% end %>
-        <%= link_to admin_trade_item_path(trade_item), method: :delete, data: { tooltip: t('.destroy'), confirm: t('.confirm') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_trade_item_path(trade_item), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'ui mini circular icon button' do %>
           <i class="fas fa-trash-alt"></i>
         <% end %>
       </td>
