--- a/app/views/factory/customs/index.html+phone.erb
+++ b/app/views/factory/customs/index.html+phone.erb
@@ -23,13 +23,13 @@
     <tr>
       <td><%= custom.id %></td>
       <td class="ui labels">
-        <%= link_to custom_path(custom), data: { tooltip: t('.show') }, class: 'ui blue mini icon button' do %>
+        <%= link_to custom_path(custom), aria: { label: t('.show') }, class: 'ui blue mini icon button' do %>
           <i class="location arrow icon"></i>
         <% end %>
-        <%= link_to edit_custom_path(custom), data: { tooltip: t('.edit') }, class: 'ui pink mini icon button' do %>
+        <%= link_to edit_custom_path(custom), aria: { label: t('.edit') }, class: 'ui pink mini icon button' do %>
           <i class="pencil alternate icon"></i>
         <% end %>
-        <%= link_to custom_path(custom), method: :delete, data: { tooltip: t('.destroy'), confirm: 'Are you sure?' }, class: 'ui red mini icon button' do %>
+        <%= link_to custom_path(custom), method: :delete, aria: { label: t('.destroy') }, data: { confrim: t('.confirm') }, class: 'ui red mini icon button' do %>
           <i class="times icon"></i>
         <% end %>
       </td>
