--- a/app/views/factory/my/good_providers/_table.html.erb
+++ b/app/views/factory/my/good_providers/_table.html.erb
@@ -22,10 +22,10 @@
       </td>
       <td><%= link_to '服务管理', my_good_provider_path(good_provider) %></td>
       <td>
-        <%= link_to edit_my_good_provider_path(good_provider), data: { tooltip: t('.edit') }, class: 'ui pink mini icon button' do %>
+        <%= link_to edit_my_good_provider_path(good_provider), aria: { label: t('.edit') }, class: 'ui pink mini icon button' do %>
           <i class="pencil alternate icon"></i>
         <% end %>
-        <%= link_to my_good_provider_path(good_provider), method: :delete, data: { tooltip: t('.destroy'), confirm: 'Are you sure?' }, class: 'ui red mini icon button' do %>
+        <%= link_to my_good_provider_path(good_provider), method: :delete, aria: { label: t('.destroy') }, data: { confrim: t('.confirm') }, class: 'ui red mini icon button' do %>
           <i class="times icon"></i>
         <% end %>
       </td>
