button use bulma

--- a/app/views/factory/admin/addresses/index.html.erb
+++ b/app/views/factory/admin/addresses/index.html.erb
@@ -28,16 +28,16 @@
       <td><%= address.post_code %></td>
       <td><%= address.source %></td>
       <td>
-        <%= link_to admin_address_path(address), aria: { label: t('.show') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_address_path(address), aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-eye"></i>
         <% end %>
-        <%= link_to admin_custom_trade_items_path(@custom, address_id: address.id), aria: { label: t('factory.admin.trade_items.index.title') }, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_custom_trade_items_path(@custom, address_id: address.id), aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-shopping-cart"></i>
         <% end %>
-        <%= link_to edit_admin_address_path(address), aria: { label: t('.edit') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to edit_admin_address_path(address), aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-pencil-alt"></i>
         <% end %>
-        <%= link_to admin_address_path(address), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_address_path(address), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-trash-alt"></i>
         <% end %>
       </td>
