--- a/app/views/factory/admin/customs/index.html.erb
+++ b/app/views/factory/admin/customs/index.html.erb
@@ -39,19 +39,19 @@
         </table>
       </td>
       <td>
-        <%= link_to admin_custom_path(custom), aria: { label: t('.show') }, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_custom_path(custom), aria: { label: t('.show') }, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-eye"></i>
         <% end %>
-        <%= link_to admin_custom_trade_items_path(custom), aria: { label: t('factory.admin.trade_items.index.title') }, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_custom_trade_items_path(custom), aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-shopping-cart"></i>
         <% end %>
-        <%= link_to admin_custom_addresses_path(custom), aria: { label: t('factory.admin.addresses.index.title') }, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_custom_addresses_path(custom), aria: { label: t('factory.admin.addresses.index.title') }, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-map-marker-alt"></i>
         <% end %>
-        <%= link_to edit_admin_custom_path(custom), aria: { label: t('.edit') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to edit_admin_custom_path(custom), aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-pencil-alt"></i>
         <% end %>
-        <%= link_to admin_custom_path(custom), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_custom_path(custom), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-trash-alt"></i>
         <% end %>
       </td>
