--- a/app/views/factory/admin/produce_plans/index.html.erb
+++ b/app/views/factory/admin/produce_plans/index.html.erb
@@ -24,13 +24,13 @@
       <td><%= produce_plan.finish_at %></td>
       <td><%= produce_plan.state %></td>
       <td>
-        <%= link_to admin_produce_plan_path(produce_plan), aria: { label: t('.show') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_produce_plan_path(produce_plan), aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-eye"></i>
         <% end %>
-        <%= link_to edit_admin_produce_plan_path(produce_plan), aria: { label: t('.edit') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to edit_admin_produce_plan_path(produce_plan), aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-pencil-alt"></i>
         <% end %>
-        <%= link_to admin_produce_plan_path(produce_plan), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_produce_plan_path(produce_plan), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-trash-alt"></i>
         <% end %>
       </td>
