--- a/app/views/factory/admin/product_plans/index.html.erb
+++ b/app/views/factory/admin/product_plans/index.html.erb
@@ -38,16 +38,16 @@
         <%= link_to product_plan.produced_count, admin_product_items_path(@product, product_plan_id: product_plan.id) %>
       </td>
       <td>
-        <%= link_to admin_product_plan_path(@product, product_plan), remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_product_plan_path(@product, product_plan), remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-eye"></i>
         <% end %>
-        <%= link_to admin_customs_path(product_plan_id: product_plan.id), class: 'ui mini circular icon button' do %>
+        <%= link_to admin_customs_path(product_plan_id: product_plan.id), class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-cube"></i>
         <% end %>
-        <%= link_to edit_admin_product_plan_path(@product, product_plan), remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to edit_admin_product_plan_path(@product, product_plan), remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-pencil-alt"></i>
         <% end %>
-        <%= link_to admin_product_plan_path(@product, product_plan), method: :delete, data: { confirm: t('.confirm') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_product_plan_path(@product, product_plan), method: :delete, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-trash-alt"></i>
         <% end %>
       </td>
