--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -48,16 +48,16 @@
         <%= link_to t('factory.admin.product_plans.index.title'), admin_product_plans_path(product), class: 'ui blue label' %>
       </td>
       <td>
-        <%= link_to admin_product_path(product), remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_product_path(product), remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-eye"></i>
         <% end %>
-        <%= link_to admin_customs_path(product_id: product.id), class: 'ui mini circular icon button' do %>
+        <%= link_to admin_customs_path(product_id: product.id), class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-cube"></i>
         <% end %>
-        <%= link_to edit_admin_product_path(product), remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to edit_admin_product_path(product), remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-pencil-alt"></i>
         <% end %>
-        <%= link_to admin_product_path(product), method: :delete, data: { confirm: t('.confirm') }, remote: true, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_product_path(product), method: :delete, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-trash-alt"></i>
         <% end %>
       </td>
