--- a/app/views/factory/admin/providers/index.html.erb
+++ b/app/views/factory/admin/providers/index.html.erb
@@ -16,7 +16,7 @@
       <td><%= provider.name %></td>
       <td><%= link_to '编辑', edit_admin_provider_path(provider) %></td>
       <td>
-        <%= link_to admin_provider_path(provider), method: :delete, data: { confirm: t('.confirm') }, class: 'ui mini circular icon button' do %>
+        <%= link_to admin_provider_path(provider), method: :delete, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-trash-alt"></i>
         <% end %>
       </td>
