--- a/app/views/factory/admin/produce_plans/_filter.html.erb
+++ b/app/views/factory/admin/produce_plans/_filter.html.erb
@@ -1,7 +1,9 @@
 <%= form_with theme: 'search', model: ProducePlan.new do |f| %>
-  <div class="fields">
+  <div class="field-body">
     <%= f.text_field :title %>
-    <%= f.submit %>
-    <%= link_to t('.clear'), filter_params(except: [:title]), class: 'ui button' %>
+    <div class="field is-narrow">
+      <%= f.submit %>
+      <%= link_to t('.clear'), filter_params(except: [:title]), class: 'button is-light' %>
+    </div>
   </div>
 <% end %>
