--- a/app/views/factory/admin/parts/_filter.html.erb
+++ b/app/views/factory/admin/parts/_filter.html.erb
@@ -1,8 +1,10 @@
 <%= form_with theme: 'search', model: Part.new do |f| %>
-  <div class="fields">
+  <div class="field-body">
     <%= f.collection_select :organ_id, Organ.all, :id, :name, { include_blank: true } %>
     <%= f.text_field :name %>
-    <%= f.submit %>
+    <div class="field is-narrow">
+      <%= f.submit %>
+    </div>
   </div>
 <% end %>
 
