--- a/app/views/factory/admin/produce_plans/_form.html.erb
+++ b/app/views/factory/admin/produce_plans/_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_with model: [:admin, @produce_plan] do |f| %>
   <%= render 'shared/error_messages', target: @produce_plan %>
   <%= f.text_field :title %>
-  <div class="inline fields">
+  <div class="field-body">
     <%= f.label :start_at %>
     <%= f.date_field 'start_at(date)', can: { wrap_all: false, label: false }, css: { wrap_input: 'three wide field' }, required: true %>
     <%= f.time_select :start_at, start_hour: 8, end_hour: 18, minute_step: 30, default: { hour: 8, min: 30 }, can: { wrap_all: false, label: false }, css: { wrap_input: 'two wide field' } %>
   </div>
-  <div class="inline fields">
+  <div class="field-body">
     <%= f.label :finish_at %>
     <%= f.date_field 'finish_at(date)', can: { wrap_all: false, label: false }, css: { wrap_input: 'three wide field' }, required: true %>
     <%= f.time_select :finish_at, start_hour: 8, end_hour: 18, minute_step: 30, default: { hour: 17, min: 30 }, can: { wrap_all: false, label: false }, css: { wrap_input: 'two wide field' } %>
