--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -1,6 +1,4 @@
-<div class="ui top attached segment">
-  <%= render 'filter' %>
-</div>
+<%= render 'filter' %>
 
 <table class="table is-hoverable is-fullwidth">
   <thead>
@@ -19,7 +17,7 @@
       <th><%= Product.human_attribute_name(:parts) %></th>
       <th></th>
       <th>
-        <%= link_to new_admin_product_path, remote: true, class: 'ui teal button' do %>
+        <%= link_to new_admin_product_path, remote: true, class: 'button is-link is-small' do %>
           <i class="fas fa-plus"></i><%= t('.new') %>
         <% end %>
       </th>
