--- a/app/views/factory/admin/part_taxons/_filter.html.erb
+++ b/app/views/factory/admin/part_taxons/_filter.html.erb
@@ -1,7 +1,9 @@
 <%= form_with theme: 'search', model: PartTaxon.new do |f| %>
-  <div class="fields">
+  <div class="field-body">
     <%= f.text_field :name %>
-    <%= f.submit %>
+    <div class="field is-narrow">
+      <%= f.submit %>
+    </div>
   </div>
 <% end %>
 
