--- a/app/views/factory/admin/product_taxons/index.html.erb
+++ b/app/views/factory/admin/product_taxons/index.html.erb
@@ -1,14 +1,11 @@
 <% content_for :breadcrumb do %>
-<div class="ui basic segment breadcrumb">
-  <%= link_to t('factory.admin.products.index.title'), admin_products_path, class: 'section' %>
-  <i class="fas fa-angle-right divider"></i>
-  <div class="active section"><%= t('.title') %></div>
-</div>
+  <ul>
+    <li><%= link_to t('factory.admin.products.index.title'), admin_products_path %></li>
+    <li class="is-active"><%= t('.title') %></li>
+  </ul>
 <% end %>
 
-<div class="ui top attached segment">
-  <%= render 'filter' %>
-</div>
+<%= render 'filter' %>
 
 <table class="table is-hoverable is-fullwidth">
   <thead>
@@ -16,7 +13,7 @@
       <th><%= ProductTaxon.human_attribute_name(:name) %></th>
       <th><%= ProductTaxon.human_attribute_name(:profit_margin) %></th>
       <th>
-        <%= link_to new_admin_product_taxon_path, remote: true, class: 'ui teal button' do %>
+        <%= link_to new_admin_product_taxon_path, remote: true, class: 'button is-link is-small' do %>
           <i class="fas fa-plus"></i><%= t('.new') %>
         <% end %>
       </th>
