--- a/app/views/factory/admin/good_providers/index.html.erb
+++ b/app/views/factory/admin/good_providers/index.html.erb
@@ -1,14 +1,12 @@
 <% content_for :breadcrumb do %>
-<div class="ui basic segment breadcrumb">
-  <%= link_to '返回', admin_facilitates_path, class: 'section' %>
-  <div class="divider">/</div>
+<ul>
+  <li><%= link_to '返回', admin_facilitates_path %></li>
   <%# link_to @good.name, admin_facilitate_path(@good), class: 'section' %>
-  <div class="divider">/</div>
-  <div class="active section">编辑</div>
-</div>
+  <li class="is-active">编辑</li>
+</ul>
 <% end %>
 
-<table class="ui table">
+<table class="table is-hoverable is-fullwidth">
   <thead>
     <tr>
       <th><%= GoodProvider.human_attribute_name(:provider) %></th>
@@ -27,13 +25,18 @@
       <td><%= good_provider.export_price %></td>
       <td>
         <span class="ui toggle checkbox">
-          <%= check_box_tag :verified, nil, good_provider.verified,
-                            data: {
-                              url: admin_good_provider_path(params[:good_type], params[:good_id], good_provider.id),
-                              method: :patch,
-                              remote: true,
-                              params: "[good_provider]verified=#{!good_provider.verified}"
-                            }
+          <%=
+            check_box_tag(
+              :verified,
+              nil,
+              good_provider.verified,
+              data: {
+                url: admin_good_provider_path(params[:good_type], params[:good_id], good_provider.id),
+                method: :patch,
+                remote: true,
+                params: "[good_provider]verified=#{!good_provider.verified}"
+              }
+            )
           %>
         </span>
       </td>
