--- a/app/views/factory/my/customs/index.html.erb
+++ b/app/views/factory/my/customs/index.html.erb
@@ -4,7 +4,7 @@
     <% @customs.each do |custom| %>
       <div class="weui-media-box weui-media-box_appmsg" data-controller="swipe" data-action="touchmove->swipe#left touchstart->swipe#start">
         <div class="weui-media-box__hd">
-          <%= image_tag custom.product.logo, class: 'weui-media-box__thumb' %>
+          <%= image_tag custom.product.logo, class: 'weui-media-box__thumb' if custom.product.logo.attached? %>
         </div>
         <div class="weui-media-box__bd">
           <h4 class="weui-media-box__title"><%= custom.product.name %></h4>
