--- a/app/views/factory/admin/product_taxons/index.html.erb
+++ b/app/views/factory/admin/product_taxons/index.html.erb
@@ -5,7 +5,7 @@
   </ul>
 <% end %>
 
-<%= render 'filter' %>
+<%= render 'filter_form' %>
 
 <table class="table is-hoverable is-fullwidth">
   <thead>
