--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'filter' %>
+<%= render 'filter_form' %>
 
 <table class="table is-hoverable is-fullwidth">
   <thead>
@@ -28,12 +28,12 @@
     <tr>
       <td><%= product.product_taxon&.name %></td>
       <td><%= product.name %></td>
-      <td><%= image_tag product.logo.variant(resize_to_limit: [80, 80]), class: 'ui tiny image' if product.logo.attached? %></td>
-      <td><%= image_tag product.main_image.variant(resize_to_limit: [80, 80]), class: 'ui tiny image' if product.main_image.attached? %></td>
+      <td><%= image_tag product.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if product.logo.attached? %></td>
+      <td><%= image_tag product.main_image.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if product.main_image.attached? %></td>
       <td><%= product.qr_prefix %></td>
       <td><%= product.price %></td>
-      <td class="ui labels">
-        <table class="ui very basic compact table">
+      <td>
+        <table class="table">
           <% product.parts.each do |part| %>
             <tr>
               <td><span class="ui label"><%= link_to part.name, admin_part_path(part), remote: true %></span></td>
@@ -43,19 +43,19 @@
         </table>
       </td>
       <td>
-        <%= link_to t('factory.admin.product_plans.index.title'), admin_product_plans_path(product), class: 'ui blue label' %>
+        <%= link_to t('factory.admin.product_plans.index.title'), admin_product_plans_path(product), class: 'button is-small is-success' %>
       </td>
       <td>
-        <%= link_to admin_product_path(product), remote: true, class: 'button is-small is-rounded is-light' do %>
+        <%= link_to admin_product_path(product), aria: { label: t('.show') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-eye"></i>
         <% end %>
-        <%= link_to admin_customs_path(product_id: product.id), class: 'button is-small is-rounded is-light' do %>
+        <%= link_to admin_customs_path(product_id: product.id), aria: { label: t('factory.admin.customs.index.title') }, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-cube"></i>
         <% end %>
-        <%= link_to edit_admin_product_path(product), remote: true, class: 'button is-small is-rounded is-light' do %>
+        <%= link_to edit_admin_product_path(product), aria: { label: t('.edit') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-pencil-alt"></i>
         <% end %>
-        <%= link_to admin_product_path(product), method: :delete, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' do %>
+        <%= link_to admin_product_path(product), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, remote: true, class: 'button is-small is-rounded is-light' do %>
           <i class="fas fa-trash-alt"></i>
         <% end %>
       </td>
