--- a/app/views/admin/_factory_nav.html.erb
+++ b/app/views/admin/_factory_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="<%= active_helper(modules: 'factory/admin', active_class: 'menu ex-accordion is-active', item_class: 'menu ex-accordion') %>" data-controller="menu">
+<div class="<%= active_helper(modules: 'factory/admin', active: 'menu ex-accordion is-active', item: 'menu ex-accordion') %>" data-controller="menu">
   <%= content_tag :div, class: 'menu-list' do %>
     <%= link_to t('factory.admin.products.index.title'), admin_products_path, class: active_helper(controllers: ['products', 'product_taxons', 'product_plans', 'product_items']) %>
     <%= link_to t('factory.admin.produce_plans.index.title'), admin_produce_plans_path, class: active_helper(controllers: ['produce_plans']) %>
