--- a/app/views/factory/products/_show.html.erb
+++ b/app/views/factory/products/_show.html.erb
@@ -15,7 +15,7 @@
     </div>
     <div class="weui-panel__bd" data-controller="input" data-input-order="<%= (@custom.part_ids & part_taxon.part_ids).join(',') %>" data-input-range="<%= "#{part_taxon.min_select},#{part_taxon.max_select}" %>">
       <% part_taxon.parts.each do |part| %>
-        <label class="weui-btn weui-btn_mini <%= active_assert(@custom.part_ids.include?(part.id), expected: 'weui-btn_primary', unexpected: 'weui-btn_default') %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
+        <label class="weui-btn weui-btn_mini <%= @custom.part_ids.include?(part.id) ? 'weui-btn_primary' : 'weui-btn_default' %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
           <span><%= part.name %></span>
           <span class="weui-btn__extra"><%= part.price %></span>
           <%= check_box_tag 'custom[part_ids][]', part.id, @custom.part_ids.include?(part.id), data: { action: 'input#toggle' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
