--- a/app/views/factory/admin/products/_form.html.erb
+++ b/app/views/factory/admin/products/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: [:admin, @product] do |f| %>
   <%= render 'shared/error_messages', target: @product %>
-  <%= render partial: 'nodes/outer_select', locals: { f: f, outer: 'product_taxon' } %>
+  <%= render partial: 'nodes/outer_select', locals: { f: f, outer: 'product_taxon', node: @product.product_taxon } %>
   <%= f.text_field :name %>
   <%= f.collection_select :part_ids, @parts, :id, :name, {  }, { multiple: true } %>
   <%= f.text_field :qr_prefix %>
