--- a/app/views/factory/products/index.html+phone.erb
+++ b/app/views/factory/products/index.html+phone.erb
@@ -2,7 +2,7 @@
   <div class="weui-panel__hd"><%= t('.title') %></div>
   <div class="weui-panel__bd">
   <% @products.each do |product| %>
-    <%= link_to product_product_plans_path(product), class: 'weui-media-box weui-media-box_appmsg' do %>
+    <%= link_to product_path(product), class: 'weui-media-box weui-media-box_appmsg' do %>
       <div class="weui-media-box__hd">
         <%= image_tag product.logo, class: 'weui-media-box__thumb' if product.logo.attached? %>
       </div>
