--- a/app/views/factory/products/_search_form.html.erb
+++ b/app/views/factory/products/_search_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_with theme: 'search' do |f| %>
-  <div class="fields">
+  <div class="field-body">
+    <%= f.text_field :name %>
     <%= f.submit %>
   </div>
 <% end %>
